--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 </head>
 <body>
-    <header>
-<h2>G3 Architects</h2>
+    <header class="header">
+
 <nav>
+    <h2 class="nav-title">G3 Architects</h2>
     <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
