--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="banner">
         <div class="banner-content">
           <h1 class="banner-title">Brand New Group of Architects</h1>
-          <p class="banner-dexcription">
+          <p class="text-light-gray">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
@@ -36,7 +36,7 @@
     </header>
     <!-- header end -->
     <main>
-      
+      <section>
         <!-- Features section -->
         <div class="team-container ">
           <div class="team-img-container">
@@ -47,11 +47,46 @@
           </div>
           <div class="team-content">
             <h3 class="team-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="the-features ">Features</span></h3>
-            <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
           </div>
         </div>
       </section> 
+      <section>
+        <!-- Features Section -->
+        <div class="features">
+
+        </div>
+      </section>
+      <!-- Facts Section -->
+      <section>
+        <div class="facts">
+          <h3 class="facts-title">Some Facts</h3>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+          <div class="facts-card-container">
+            <div class="card">
+              <img src="images/icons/ribon.png" alt="">
+              <h2 class="card-stats">54</h2>
+              <p class="card-tittle">Awards Winnings</p>
+            </div>
+            <div class="card">
+              <img src="images/icons/projects.png" alt="">
+              <h2 class="card-stats">1458</h2>
+              <p class="card-tittle">Project Finished</p>
+            </div>
+            <div class="card">
+              <img src="images/icons/customers.png" alt="">
+              <h2 class="card-stats">590</h2>
+              <p class="card-tittle">Clients Worked</p>
+            </div>
+            <div class="card">
+              <img src="images/icons/email.png" alt="">
+              <h2 class="card-stats">22578</h2>
+              <p class="card-tittle">Email Send</p>
+            </div>
+          </div>
+        </div>
+      </section>
      
     </main>
     <footer></footer>
