--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="sponspors">
+          <h2 class="sponspors-title">Our Sponspors</h2>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+          <div class="sponspors-img-container">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+           
+          </div>
+        </div>
+      </section>
      
     </main>
     <footer></footer>
